--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -149,11 +149,6 @@
                 \item Realizar considerações finais acerca do resultados obtidos com o comparativo dos benchmarks e propor melhorias.
             \end{itemize}
 
-
-\section{Metodologia}
-
-    TODO - Escolher Metodologia de Pesquisa
-
 \section{Organização do Trabalho}
 
     Esse TCC está organizado em oito capítulos, sendo este primeiro a Introdução. Os
@@ -162,24 +157,26 @@
     \begin{itemize}
         \item \textbf{Revisão sistemática:} Neste capítulo existirão subtópicos explicando alguns conceitos de CDR de forma mais
                                                                     aprofundada, e também os ferramentais como \textit{Hadoop, Yarn, MapReduce, Spark,
-                                                                    Impala, Hive} e dentre outras ferramentas caso haja necessidade de inclusão, para o
+                                                                    Impala} e dentre outras ferramentas caso haja necessidade de inclusão, para o
                                                                     aperfeiçoamento do processamento de dados.
-        \item \textbf{Montagem do ambiente:} Realiza uma explicação sobre quais os procedimentos que foram realizados,
-                                                                         bem como informações sobre a arquitetura hardware e software utilizada, e
-                                                                         como foram realizadas as configurações rede entre nós do cluster alvo. O
-                                                                         objetivo é apresentar uma visão da arquitetura que será utilizada no cluster.
-        \item \textbf{Benchmarks:} Teremos a apresentação do ferramental responsável tanto pelo monitoramento quanto
-                                                       pela captura das métricas que serão utilizadas e armazenadas para questões comparativas.
-                                                       Explicação de como serão realizado os benchmarks e as possíveis ferramentas de análise
-                                                       dos dados fornecido pelos benchmarks.
-        \item \textbf{Replicação do processamento de dados:} Apresentação do estudo sobre implantação dos CDR's no cluster,
-                                                                                                   inicio do processo de inserção de CDR's, e realização da replicação
-                                                                                                   do processamendo dos CDR's no cluster alvo. Explicação do passo
-                                                                                                   a passo sobre como foram realizados esses procedimentos, bem
-                                                                                                   como se o processo está semelhante ao que é normalmente
-                                                                                                   realizado. Neste capítulo temos também a apresentação da captura
-                                                                                                   dos benchmarks para o comparativo que será realizado.
-        \item \textbf{Resultados Obtidos: } Aqui teremos o comparativo dos benchmarks, bem como as respostas para as
+        \item \textbf{Metodologia:} Esse capítulo irá apresentar a metodologia utilizada na validação do projeto bem como,
+                                                       a classificação da pesquisa, planejamento, sujeitos e objetos, instrumentos de coleta e
+                                                       análise de dados, cronograma do projeto e por fim as considerações finais referentes á
+                                                       metodologia utilizada em relação ao projeto.
+        \item \textbf{Proposta: } Realiza uma explicação sobre quais os procedimentos que serão realizados bem como
+                                                  informações sobre a arquitetura hardware e software a ser utilizada, e como foram serão
+                                                  realizadas as configurações rede entre os nós do cluster alvo. O objetivo é apresentar uma visão da
+                                                  arquitetura que será utilizada no cluster. Teremos a apresentação do ferramental responsável
+                                                  tanto pelo monitoramento quanto pela captura das métricas que serão utilizadas e armazenadas
+                                                  a quesito comparativo. Explicação de como serão realizado os benchmarks e as possíveis
+                                                  ferramentas de análise dos dados fornecido pelos benchmarks.
+        \item \textbf{Processamento de Dados:} Apresentação do estudo sobre implantação dos CDR's no cluster, inicio do
+                                                                            processo de inserção dos dados e replicação do processamendo de dados
+                                                                            no cluster alvo. Explicação do passo a passo sobre como foram realizados
+                                                                            esses procedimentos, bem como se o processo está semelhante ao que é
+                                                                            normalmente realizado. Neste capítulo temos também a apresentação da
+                                                                            captura dos benchmarks para o comparativo que será realizado.
+        \item \textbf{Análise dos Resultados:} Aqui teremos o comparativo dos benchmarks, bem como as respostas para as
                                                                   questões de pesquisa o qual foram estabelecidas. O objetivo é averiguar se os
                                                                   dados coletados demonstram se as configurações realizadas foram os suficientes
                                                                   para diminuir o tempo de processamento.
