--- a/tcc.tex
+++ b/tcc.tex
@@ -29,11 +29,15 @@
 
 \input{editaveis/introducao}
 \input{editaveis/revisaosistematica}
-\input{editaveis/aspectosgerais}
+\input{editaveis/metodologia}
+\input{editaveis/proposta}
+%\input{editaveis/aspectosgerais}
+\input{editaveis/processamentodados}
+\input{editaveis/analiseresultados}
 \input{editaveis/consideracoes}
-\input{editaveis/textoepostexto}
-\input{editaveis/elementosdotexto}
-\input{editaveis/elementosdopostexto}
+%\input{editaveis/textoepostexto}
+%\input{editaveis/elementosdotexto}
+%\input{editaveis/elementosdopostexto}
 
 \bookmarksetup{startatroot}
 
