Revisao Sistematica Hadoop

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -6,7 +6,6 @@
 	Volume={10},
 	Number={4},
 	Pages={18-26},
-	Keywords={cellular radio;town and country planning;CDR data;New York City;call detail records;cellular network data;city dynamics;people flow analysis;suburban city;urban planning;Cellular networks;Cellular phones;Land mobile radio cellular systems;Poles and towers;Stratetic planning;Telecommunication network management;Telecommunication traffic;Urban areas;Large-scale opportunistic sensing;call detail records;cellular data;people flow;pervasive computing;urban planning},
 	Doi={10.1109/MPRV.2011.44},
 	ISSN={1536-1268},
 	Month={April},
@@ -27,6 +26,25 @@
 	 URL = {http://doi.acm.org/10.1145/2398356.2398375},
 	 DOI = {10.1145/2398356.2398375},
 	 ACMID = {2398375},
+	 Publisher = {ACM},
+	 Address = {New York, NY, USA},
+}
+
+@article{dean2008,
+	 Author = {Dean, Jeffrey and Ghemawat, Sanjay},
+	 Title = {MapReduce: Simplified Data Processing on Large Clusters},
+	 Journal = {Commun. ACM},
+	 Issue_date = {January 2008},
+	 Volume = {51},
+	 Number = {1},
+	 Month = jan,
+	 Year = {2008},
+	 ISSN = {0001-0782},
+	 Pages = {107--113},
+	 Numpages = {7},
+	 URL = {http://doi.acm.org/10.1145/1327452.1327492},
+	 DOI = {10.1145/1327452.1327492},
+	 ACMID = {1327492},
 	 Publisher = {ACM},
 	 Address = {New York, NY, USA},
 }
@@ -122,6 +140,17 @@
 	 Address = {New York, NY, USA},
 }
 
+@inproceedings{alam2014,
+	Author = {A. Alam and J. Ahmed},
+	Booktitle={Computational Science and Computational Intelligence (CSCI), 2014 International Conference on},
+	Title = {Hadoop Architecture and Its Issues},
+	Volume={2},
+	Pages = {288-291},
+	Year = {2014},
+	DOI={10.1109/CSCI.2014.140},
+	Month={March},
+}
+
 @inproceedings{tugores2013,
 	Author = {Maria Antonia Tugores and Pere Colet},
 	Title = {Big Data and Urban Mobility},
@@ -138,7 +167,6 @@
 	Title = {Analysis of GSM calls data for understanding user mobility behavior},
 	Year = {2013},
 	Pages = {550-555},
-	Keywords = {cellular radio;data analysis;data mining;data privacy;pattern classification;telecommunication computing;GSM calls data;Global System for Mobile Communications;analysis phase;behavior categories;bootstrap phase;call profiles;commuters;data analysis;data provider;fingerprint analysis;mining algorithm;mobility behavior classification;mobility behavior identification;privacy constraints;privacy-preserving representation;residents;running phase;user call profiles;user mobility behavior;visitors;Analytical models;Cities and towns;Data privacy;GSM;Mobile handsets;Monitoring;Urban areas},
 	DOI = {10.1109/BigData.2013.6691621},
 	Month = {Oct},
 }
@@ -152,6 +180,17 @@
 	Volume = {19},
 	Number = {3},
 	Booktitle = {Journal of the Brazilian Societyt Mechanical Sciences},
+}
+
+@inproceedings{shvachko2010,
+	Author = {K. Shvachko and H. Kuang and S. Radia and R. Chansler},
+	Booktitle = {2010 IEEE 26th Symposium on Mass Storage Systems and Technologies (MSST)},
+	Title = {The Hadoop Distributed File System},
+	Pages = {1-10},
+	Year = {2010},
+	DOI = {10.1109/MSST.2010.5496972},
+	ISSN = {2160-195X},
+	Month = {May},
 }
 
 @inproceedings{sparrow1980,
