Revisão Sistematica MapReduce

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -105,6 +105,27 @@
 	Organization = {VISENT},
 }
 
+@misc{hadoopexample,
+	Author = {Hadoop},
+	Title = {The Hadoop Distributed File System (HDFS)},
+	URL = {http://www.myhadoopexamples.com/2015/08/22/hadoop-distributed-file-system-hdfs-and-mapreduce/},
+	Note = {Acessado no dia 06 de maio de 2016},
+	Year = {2016},
+	Month = {Maio},
+	Organization = {MyHadoopExamples},
+}
+
+@misc{hadoopapache,
+	Author = {Hadoop Apache},
+	Title = {HDFS Architecture},
+	URL = {https://hadoop.apache.org/docs/r2.6.4/hadoop-project-dist/hadoop-hdfs/images/hdfsarchitecture.gif},
+	Note = {Acessado no dia 07 de maio de 2016},
+	Year = {2016},
+	Month = {Maio},
+	Organization = {Apache},
+}
+
+
 @techreport{pontes2011,
 	Author = {Taís Furtado Pontes},
 	Title = {Avaliação da mobilidade urbana na area metropolitana de Brasília},
